fixed problem of last line of page hidden by footer

--- a/app/css/components/about.css
+++ b/app/css/components/about.css
@@ -15,6 +15,10 @@
   padding-bottom: 15px;
 }
 
+.lastPaddingBottom {
+  padding-bottom: 80px;
+}
+
 .content { @apply --small; }
 
 ul.list {
